--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,12 @@ body {
 
 .organization-table__row {
     display: flex;
-    gap: 1px
+    gap: 1px;
+    cursor: pointer;
+}
+
+.organization-table__row:hover {
+    opacity: 0.9;
 }
 
 .organization-table__content {
@@ -97,4 +102,82 @@ body {
     content: '\2193';
     display: inline-block;
     margin-left: 5px;
+}
+
+.top-panel {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.form-modal {
+    display: none;
+    width: 400px;
+    height: 600px;
+    border-radius: 10px;
+    outline: 2px solid black;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 32px 16px;
+    flex-direction: column;
+}
+
+.form-modal__title {
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.close-button {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    cursor: pointer;
+}
+
+.close-button__icon {
+    width: 16px;
+    height: 16px;
+    background-color: red;
+    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+}
+
+.fields-section {
+    flex-grow: 1;
+}
+
+.fields-section__field {
+    margin-bottom: 12px;
+}
+
+.fields-section__label {
+    margin-bottom: 4px;
+}
+
+.fields-section__input {
+    width: 97%;
+    padding: 5px;
+}
+
+.form-content {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+.buttons-section {
+    display: flex;
+    gap: 10px
+}
+
+.buttons-section__button {
+    flex-grow: 1;
+    height: 30px;
+}
+
+.delete-action-button {
+    cursor: pointer;
 }
